# kastaniebakken-agents

./: Dockerfile  Untitled.ipynb  Untitled1.ipynb  docker-compose.yml  hello.py  main.py  pyproject.toml  requirements.txt  selenium-testing.ipynb
crew_output/: week-15-Friday.md  week-15-Monday.md  week-15-Thursday.md  week-15-Tuesday.md  week-15-Wednesday.md
morning_routine/: .gitignore  README.md  dockerfile  morning_routine.py  pyproject.toml  rxconfig.py  scraper.py
morning_routine/agents/: crew.py
morning_routine/agents/config/: agents.yaml  tasks.yaml
morning_routine/agents/tools/: custom_tool.py
morning_routine/morning_routine/: morning_routine.py  scraper.py
morning_routine/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
morning_routine/src/morning_routine/: crew.py  main.py
morning_routine/src/morning_routine/config/: tasks.yaml
morning_routine/src/morning_routine/tools/: custom_tool.py
