[project]
name = "morning_routine"
version = "0.1.0"
description = "morning-routine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "html2text>=2024.2.26",
    "jupyterlab>=4.3.6",
    "python-dotenv>=1.1.0",
    "reflex>=0.7.5",
    "selenium>=4.30.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
morning_routine = "morning_routine.main:run"
run_crew = "morning_routine.main:run"
train = "morning_routine.main:train"
replay = "morning_routine.main:replay"
test = "morning_routine.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
